[gd_scene load_steps=6 format=3 uid="uid://b1un2h28nypus"]

[ext_resource type="Texture2D" uid="uid://cduf2i4a1gh7d" path="res://Art/cards.png" id="1_jgm71"]
[ext_resource type="Script" path="res://scripts/card.gd" id="2_3i8dv"]
[ext_resource type="AudioStream" uid="uid://b6i2et2im2ecy" path="res://sfx/click.wav" id="3_2kto2"]
[ext_resource type="AudioStream" uid="uid://dfoy70a3yb55i" path="res://sfx/unclick.wav" id="4_7wb3e"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_q3bik"]
size = Vector2(21.3333, 29.3333)

[node name="Card" type="Sprite2D"]
scale = Vector2(3, 3)
texture = ExtResource("1_jgm71")
hframes = 15
vframes = 4
frame = 54
script = ExtResource("2_3i8dv")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0.333333, 0.333333)
shape = SubResource("RectangleShape2D_q3bik")

[node name="clickedSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_2kto2")
volume_db = -15.0

[node name="unclickedSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_7wb3e")
volume_db = -18.0

[connection signal="input_event" from="Area2D" to="." method="_on_area_2d_input_event"]
